cmake_minimum_required(VERSION 2.8.3)
project(drc_lcmtypes)

find_package(catkin REQUIRED COMPONENTS
  lcm_ros
  bot_core_lcmtypes
)

catkin_package(
  #INCLUDE_DIRS include/${PROJECT_NAME}
  LIBRARIES lcmtypes_${PROJECT_NAME}
  CATKIN_DEPENDS lcm_ros bot_core_lcmtypes
#  DEPENDS system_lib
)

AddLCM(
drc_affordance_collection_t
drc_affordance_t
drc_auto_iris_segmentation_request_t
drc_bandwidth_stats_t
drc_behavior_command_t
drc_behavior_t
drc_behavior_transition_t
drc_block_fit_request_t
drc_boolean_t
drc_controller_debug_t
drc_controller_foot_contact_t
drc_controller_state_t
drc_controller_status_t
drc_data_request_list_t
drc_data_request_t
drc_double_array_t
drc_driving_control_cmd_t
drc_exotica_planner_request_t
drc_fall_detector_status_t
drc_foot_contact_estimate_t
drc_footstep_check_request_t
drc_footstep_params_t
drc_footstep_plan_params_t
drc_footstep_plan_progress_t
drc_footstep_plan_request_t
drc_footstep_plan_t
drc_footstep_t
drc_gamepad_cmd_t
drc_grasp_transition_state_t
drc_image_roi_t
drc_int64_stamped_t
drc_iris_region_request_t
drc_iris_region_response_t
drc_iris_region_t
drc_joint_command_relative_t
drc_joint_position_goal_t
drc_lin_con_t
drc_map_blob_t
drc_map_catalog_t
drc_map_cloud_t
drc_map_command_t
drc_map_depth_settings_t
drc_map_image_t
drc_map_octree_t
drc_map_params_t
drc_map_pointcloud_request_t
drc_map_registration_command_t
drc_map_request_t
drc_map_scans_t
drc_map_scan_t
drc_map_snapshot_request_t
drc_message_rate_t
drc_neck_pitch_t
drc_pfgrasp_command_t
drc_plan_control_t
drc_planner_request_t
drc_plan_status_t
drc_position_3d_sequence_t
drc_qp_locomotion_plan_t
drc_reactive_recovery_debug_t
drc_recovery_trigger_t
drc_rect_t
drc_robot_plan_t
drc_robot_plan_with_supports_t
drc_robot_plan_w_keyframes_t
drc_robot_posture_preset_t
drc_scs_api_command_t
drc_shaper_data_request_t
drc_string_t
drc_subimage_request_t
drc_subimage_response_t
drc_support_body_t
drc_support_element_t
drc_support_sequence_t
drc_tag_detection_list_t
drc_tag_detection_t
drc_terrain_raycast_request_t
drc_trigger_finger_t
drc_utime_t
drc_utime_two_t
drc_walking_plan_request_t
drc_walking_plan_t
)

GenerateLCM()
