<?xml version="1.0"?>
<package format="2">
  <name>lcm_ros</name>
  <version>1.1.0</version>
  <description>The Leighweight Marshalling library package</description>
  <maintainer email="v.ivan@ed.ac.uk">Vladimir Ivan</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>lcm</depend>
  <depend>Java</depend>
</package>
