<?xml version="1.0"?>
<package format="2">
  <name>lcm_test</name>
  <version>0.0.0</version>
  <description>The lcm test package</description>
  <maintainer email="v.ivan@ed.ac.uk">Vladimir Ivan</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>drc_lcmtypes</depend>
</package>
